[package]
name = "esp-app"
version = "0.1.0"
edition = "2018"

[patch.crates-io]
cstr_core = { path = "cstr_core" }

# Use https://github.com/japaric/serde-json-core/pull/12
serde-json-core = { git = "https://github.com/ctron/serde-json-core", branch = "feature/support_floats_1" }

[dependencies]
esp-idf-alloc = { path = "esp-idf-alloc" }
esp32-sys = { path = "esp32-sys" }
cstr_core = { version = "0.1.2", features = [ "alloc" ] }
cty = "0.2.1"
serde = { version = "1.0.99", default-features = false, features = ["derive"] }
serde-json-core = "0.0.1"
heapless = "0.4"
generic-array = "0.11"

[profile.dev]
lto = false
incremental = false
debug = false # debug adds frame pointers - which must be omitted

[profile.release]
lto = false
incremental = false
debug = false # debug adds frame pointers - which must be omitted
